# trdr

./: .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE
db/: markets.sql
nginx/: README.md  docker-compose.yml
nginx/templates/: default.conf.template
src/: args.rs  error.rs  lib.rs  sql.rs
src/cmc/: cryptocurrencies.rs  enums.rs  fiat.rs  fiats.rs  mod.rs  status.rs
src/cmc/sql/: cryptocurrencies_insert.sql  fiats_insert.sql  metals_insert.sql  updates_insert.sql
